# rules_hugo

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  shell.nix
documentation/: build_rules.md  workspace_rules.md
examples/github_theme/: config.toml
examples/gitlab_theme/: BUILD.bazel  config.toml
examples/gitlab_theme/content/: _index.md
examples/papermod_github/: BUILD.bazel  config.toml
examples/papermod_github/content/: _index.md
examples/papermod_gitlab/: BUILD.bazel  config.toml
hugo/: repositories.bzl  rules.bzl
hugo/config/: BUILD.bazel  write_config.py
hugo/internal/: git_hugo_theme.bzl  github_hugo_theme.bzl  gitlab_hugo_theme.bzl  hugo_config.bzl  hugo_repository.bzl  hugo_site.bzl  hugo_theme.bzl
scripts/: get_commit_id.sh
site/: BUILD.bazel
