load("@rules_hugo//hugo:rules.bzl", "hugo_serve", "hugo_site", "hugo_theme")

hugo_theme(
    name = "book",
    srcs = [
        "@com_github_alex_shpak_hugo_book//:files",
    ],
)

hugo_site(
    name = "site",
    config = "config.yaml",
    content = glob(["content/**"]),
    layouts = glob(["layouts/**"]),
    static = glob(["static/**"]),
    theme = ":book",
)

hugo_serve(
    name = "site_serve",
    dep = [":site"],
)

sh_test(
    name = "site_test",
    srcs = ["site_test.sh"],
    data = [":site"],
)
