load("@rules_hugo//hugo:rules.bzl", "hugo_serve", "hugo_site", "hugo_theme")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files")

hugo_theme(
    name = "theme",
    srcs = [
        "@hugo_papermod_theme_github//:files",
    ],
    theme_name = "PaperMod",
)

pkg_files(
    name = "env_file",
    srcs = glob(["env_file_test"]),
)

hugo_site(
    name = "site",
    config = "config.toml",
    content = glob(["content/**"]),
    layouts = glob(["layouts/**"]),
    static = glob(["static/**"]),
    theme = ":theme",
    env_from_files = {
        ":env_file": "ENV_FILE_TEST",
    },
)

hugo_serve(
    name = "serve",
    dep = [":site"],
    env_from_files = {
        ":env_file": "ENV_FILE_TEST",
    },
)

sh_test(
    name = "site_test",
    srcs = ["site_test.sh"],
    data = [":site"],
)
