load("@rules_hugo//hugo:rules.bzl", "hugo_serve", "hugo_site", "hugo_theme")

hugo_theme(
    name = "theme",
    srcs = [
        "@hugo_papermod_theme_gitlab//:files",
    ],
    theme_name = "PaperMod",
)

hugo_site(
    name = "site",
    config = "config.toml",
    content = glob(["content/**"]),
    layouts = glob(["layouts/**"]),
    static = glob(["static/**"]),
    theme = ":theme",
)

hugo_serve(
    name = "serve",
    dep = [":site"],
)
